[project]
name = "repo_eater"
description = "ComfyUI node for consuming and processing repository content"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["gitingest>=0.1.0", "tiktoken>=0.5.0"]

[project.urls]
Repository = "https://github.com/gabe-init/ComfyUI-Repo-Eater"
# Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "gabe-init"
DisplayName = "ComfyUI-Repo-Eater"
Icon = ""